fixed validation error with error message rendering, changed payment and expense amount  input fields to numeric field to fix bug on iOS

--- a/client/src/components/containerComponents/GroupActionsComponent/GroupActionsComponent.module.css
+++ b/client/src/components/containerComponents/GroupActionsComponent/GroupActionsComponent.module.css
@@ -1,5 +1,5 @@
 .buttonContainer {
   display: flex;
   justify-content: center;
-  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
